#WIP - Creating header component

--- a/src/app/components/header/header.page.html
+++ b/src/app/components/header/header.page.html
@@ -1,13 +1,8 @@
-<ion-header [translucent]="true" class="ion-padding">
+<ion-header [translucent]="true" class="header--line-bottom ion-padding">
   <ion-toolbar>
-    <ion-title>header</ion-title>
+    <div class="header--logo">
+      <ion-img src="assets/images/logo.svg" alt="Action Labs"></ion-img>
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">header</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
