#WIP - Creating basic structure of the home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,16 @@
+<div class="home ion-padding">
 
-<ion-content [fullscreen]="true">
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="home--title">
+    <h2>BRL EXCHANGE RATE</h2>
   </div>
-</ion-content>
+
+  <div class="home--currency">
+    <ion-input fill="solid" placeholder="Enter the currency code"></ion-input>
+  </div>
+
+  <div class="home--action">
+    <ion-button expand="block" class="button-submit">EXCHANGE RESULT</ion-button>
+  </div>
+  <div>
+  </div>
+</div>
