--- a/src/app/components/header/header.page.html
+++ b/src/app/components/header/header.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true" class="header--line-bottom ion-padding">
+<ion-header [translucent]="true" class="header header--line-bottom ion-padding">
   <ion-toolbar>
     <div class="header--logo">
       <ion-img src="assets/images/logo.svg" alt="Action Labs"></ion-img>
