--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,17 +1,20 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+@import "src/theme/fonts/roboto.font";
+
 /** Ionic CSS Variables **/
 :root {
   --ion-font-family: 'Roboto';
+  --header-area: 5rem;
 
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #3dc2ff;
+  --ion-color-primary-rgb: 61, 194, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #36abe0;
+  --ion-color-primary-tint: #50c8ff;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
