--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,6 +7,7 @@
 :root {
   --ion-font-family: 'Roboto';
   --header-area: 5rem;
+  --footer-area: 2rem;
 
   /** primary **/
   --ion-color-primary: #3dc2ff;
