--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,7 @@
 .home {
   margin-top: var(--header-area);
+  overflow: auto;
+  margin-bottom: var(--footer-area);
 
   &--title {
     margin-top: 1rem;
@@ -11,7 +13,71 @@
     margin-top: 2rem;
   }
 
+  ion-item {
+    width: 100%;
+    --padding-start: 0;
+    --min-height: 5rem;
+    --inner-padding-end: 0;
+  }
+
+  .border-blue {
+    border-bottom: 3px solid var(--ion-color-primary);
+  }
+
   &--action {
+    width: 100%;
     margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  &--result {
+    margin-top: 1rem;
+
+    section {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    &--header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &--current-value {
+      display: flex;
+      justify-content: center;
+      height: 4rem;
+      align-items: center;
+      background-color: rgba(7, 176, 251, 0.2);
+    }
+
+    &--last-days {
+
+      &--items {
+        padding: 0.5rem;
+        background-color: var(--ion-color-light);
+
+        ion-card {
+          margin: 0.5rem;
+
+          ion-card-content {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+
+            .infos {
+              display: flex;
+            }
+
+            span {
+              font-weight: bold;
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
