--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -69,7 +69,7 @@
         background-color: var(--ion-color-light);
 
         ion-card {
-          margin: 0.5rem;
+          margin: 0.1rem;
 
           ion-card-content {
             display: flex;
@@ -78,6 +78,10 @@
 
             .infos {
               display: flex;
+            }
+
+            ion-label {
+              font-size: 0.7rem;
             }
 
             span {
