--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,14 @@
   display: none;
 }
 
+.positive {
+  color: var(--ion-color-success);
+}
+
+.negative {
+  color: var(--ion-color-danger);
+}
+
 ion-accordion-group{
   ion-accordion {
     .ion-accordion-toggle-icon {
