--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,8 +30,7 @@
 
   &--action {
     width: 100%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin: 2rem 0 2rem 0;
   }
 
   &--result {
